@@ -44,6 +44,9 @@ Enhancements since 1.6
 
 - Allow 'Z' and 'ZZ' in format patterns to parse 'Z' as '+00:00' [2827359]
 
+- Add DateTimeFormatter.withZoneUTC()
+  Provides easy way to set UTC, which is often required for parsing
+
 - Add LocalDate.toDate() [2465359]
 - Add LocalDateTime.toDate()
   This provides a direct conversion to JDK Date which handles DST and
